entity_macros/tests/ui/derive/ent/no-ent-query-attr-means-no-typed-query.stderr
error[E0433]: failed to resolve: use of undeclared type `TestEntQuery`
  --> $DIR/no-ent-query-attr-means-no-typed-query.rs:20:13
   |
20 |     let _ = TestEntQuery::default();
   |             ^^^^^^^^^^^^ use of undeclared type `TestEntQuery`
